Added modsecurity, cleanup/refactor of dockerfile

--- a/.htaccess
+++ b/.htaccess
@@ -111,6 +111,7 @@
     RewriteRule .* - [F]
 </IfModule>
 
+# TODO: Check if following is needed when modsecurity is in use
 # Block bad query strings
 <IfModule mod_rewrite.c>
     RewriteEngine On
@@ -189,89 +190,6 @@
 
 </IfModule>
 
-
-# Outright block bad characters and known exploits
-<IfModule mod_alias.c>
-    RedirectMatch 403 \,
-    RedirectMatch 403 \:
-    RedirectMatch 403 \;
-    RedirectMatch 403 \=
-    RedirectMatch 403 \[
-    RedirectMatch 403 \]
-    RedirectMatch 403 \^
-    RedirectMatch 403 \`
-    RedirectMatch 403 \{
-    RedirectMatch 403 \}
-    RedirectMatch 403 \~
-    RedirectMatch 403 \"
-    RedirectMatch 403 \$
-    RedirectMatch 403 \<
-    RedirectMatch 403 \>
-    RedirectMatch 403 \|
-    RedirectMatch 403 \.\.
-    RedirectMatch 403 \%0
-    RedirectMatch 403 \%A
-    RedirectMatch 403 \%B
-    RedirectMatch 403 \%C
-    RedirectMatch 403 \%D
-    RedirectMatch 403 \%E
-    RedirectMatch 403 \%F
-    RedirectMatch 403 \%22
-    RedirectMatch 403 \%27
-    RedirectMatch 403 \%28
-    RedirectMatch 403 \%29
-    RedirectMatch 403 \%3C
-    RedirectMatch 403 \%3E
-    RedirectMatch 403 \%3F
-    RedirectMatch 403 \%5B
-    RedirectMatch 403 \%5C
-    RedirectMatch 403 \%5D
-    RedirectMatch 403 \%7B
-    RedirectMatch 403 \%7C
-    RedirectMatch 403 \%7D
-    # COMMON PATTERNS
-    Redirectmatch 403 \_vpi
-    RedirectMatch 403 \.inc
-    Redirectmatch 403 xAou6
-    Redirectmatch 403 db\_name
-    Redirectmatch 403 select\(
-    Redirectmatch 403 convert\(
-    Redirectmatch 403 \/query\/
-    RedirectMatch 403 ImpEvData
-    Redirectmatch 403 \.XMLHTTP
-    Redirectmatch 403 proxydeny
-    RedirectMatch 403 function\.
-    Redirectmatch 403 remoteFile
-    Redirectmatch 403 servername
-    Redirectmatch 403 \&rptmode\=
-    Redirectmatch 403 sys\_cpanel
-    RedirectMatch 403 db\_connect
-    RedirectMatch 403 doeditconfig
-    RedirectMatch 403 check\_proxy
-    Redirectmatch 403 system\_user
-    Redirectmatch 403 \/\(null\)\/
-    Redirectmatch 403 clientrequest
-    Redirectmatch 403 option\_value
-    RedirectMatch 403 ref\.outcontrol
-    # SPECIFIC EXPLOITS
-    RedirectMatch 403 errors\.
-    RedirectMatch 403 config\.
-    RedirectMatch 403 include\.
-    RedirectMatch 403 display\.
-    RedirectMatch 403 register\.
-    Redirectmatch 403 password\.
-    RedirectMatch 403 maincore\.
-    RedirectMatch 403 authorize\.
-    Redirectmatch 403 macromates\.
-    RedirectMatch 403 head\_auth\.
-    RedirectMatch 403 submit\_links\.
-    RedirectMatch 403 change\_action\.
-    Redirectmatch 403 com\_facileforms\/
-    RedirectMatch 403 admin\_db\_utilities\.
-    RedirectMatch 403 admin\.webring\.docs\.
-    Redirectmatch 403 Table\/Latest\/index\.
-</IfModule>
-
 # TODO: Spam bot protection
 #<IfModule mod_rewrite.c>
 #    RewriteEngine On
@@ -295,13 +213,13 @@
 # END All In One WP Security
 
 # Brute force prevention
-RewriteEngine On
-RewriteCond %{REQUEST_URI} (wp-admin|wp-login)
-RewriteCond %{REQUEST_URI} !(wp-admin/admin-ajax.php)
-RewriteCond %{HTTP_COOKIE} != [NC]
-RewriteCond %{HTTP_COOKIE} != [NC]
-RewriteRule .* http://127.0.0.1 [L]
-
+#RewriteEngine On
+#RewriteCond %{REQUEST_URI} (wp-admin|wp-login)
+#RewriteCond %{REQUEST_URI} !(wp-admin/admin-ajax.php)
+#RewriteCond %{HTTP_COOKIE} != [NC]
+#RewriteCond %{HTTP_COOKIE} != [NC]
+#RewriteRule .* http://127.0.0.1 [L]
+#
 
 ServerSignature Off
 # Limit request size to 64MB
