Modsec rule ignore for file uploads

--- a/apache-conf/security2.conf
+++ b/apache-conf/security2.conf
@@ -12,28 +12,33 @@
 	IncludeOptional /usr/share/modsecurity-crs/owasp-crs.load
 </IfModule>
 
+
+<LocationMatch "/wp-admin/async-upload.php">
+    SecRuleRemoveById 200004
+</LocationMatch>
+
 # https://www.binarymoon.co.uk/2011/05/wordpress-mod-security-2/
-<locationmatch "/wp-admin/admin-ajax.php">
+<LocationMatch "/wp-admin/admin-ajax.php">
     SecRuleRemoveById 300013
     SecRuleRemoveById 300015
     SecRuleRemoveById 300016
     SecRuleRemoveById 300017
     SecRuleRemoveById 949110
     SecRuleRemoveById 980130
-</locationmatch>
-<locationmatch "/wp-admin/page.php">
+</LocationMatch>
+<LocationMatch "/wp-admin/page.php">
     SecRuleRemoveById 300013
     SecRuleRemoveById 300015
     SecRuleRemoveById 300016
     SecRuleRemoveById 300017
     SecRuleRemoveById 949110
     SecRuleRemoveById 980130
-</locationmatch>
-<locationmatch "/wp-admin/post.php">
+</LocationMatch>
+<LocationMatch "/wp-admin/post.php">
     SecRuleRemoveById 300013
     SecRuleRemoveById 300015
     SecRuleRemoveById 300016
     SecRuleRemoveById 300017
     SecRuleRemoveById 949110
     SecRuleRemoveById 980130
-</locationmatch>
+</LocationMatch>
