Updated modsecurity with rules from GitHub,  updated pcre limits to avoid hitting errors frequently,  disabled rules preventing post submit

--- a/apache-conf/security2.conf
+++ b/apache-conf/security2.conf
@@ -9,12 +9,25 @@
         IncludeOptional /etc/modsecurity/*.conf
 
 	# Include OWASP ModSecurity CRS rules if installed
-	IncludeOptional /usr/share/modsecurity-crs/owasp-crs.load
+#	IncludeOptional /usr/share/modsecurity-crs/owasp-crs.load
+        IncludeOptional /usr/share/modsecurity-crs/*.conf
+        IncludeOptional "/usr/share/modsecurity-crs/rules/*.conf
 </IfModule>
-
 
 <LocationMatch "/wp-admin/async-upload.php">
     SecRuleRemoveById 200004
+</LocationMatch>
+<LocationMatch "/wp-admin/admin-ajax.php">
+#    # Fix for "PCRE limits exceeded" with elementor.
+#    SecRuleRemoveById 941310
+#    # Fix for "PCRE limits exceeded" with elementor.
+#    SecRuleRemoveById 941350
+    # Fix Elementor publish "NoScript XSS InjectionChecker: HTML Injection ... Matched Data: <img"
+    SecRuleRemoveById 941160
+    # Fix Elementor "NoScript XSS InjectionChecker: HTML Injection ... Matched Data: <span"
+    SecRuleRemoveById 941100
+    # Fix Elementor "Remote Command Execution: Unix Shell Expression Found"
+    SecRuleRemoveById 932130
 </LocationMatch>
 
 # https://www.binarymoon.co.uk/2011/05/wordpress-mod-security-2/
