Added image for development purposes (i.e. with xdebug)

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,11 @@ services:
   - docker
 
 script:
-  - docker build -t $TRAVIS_REPO_SLUG:2 .
+    - bash build.sh $TRAVIS_REPO_SLUG 2
 
 deploy:
-  provider: script
-  script: bash deploy.sh $TRAVIS_REPO_SLUG:2
-  on:
-    branch: master
+    provider: script
+    script:
+        - bash deploy.sh $TRAVIS_REPO_SLUG 2
+    on:
+        branch: master
