--- a/conf-enabled/security2.conf
+++ b/conf-enabled/security2.conf
@@ -1,19 +1,12 @@
-<IfModule security2_module>
-	# Default Debian dir for modsecurity's persistent data
-	SecDataDir /var/cache/modsecurity
 
-	# Include all the *.conf files in /etc/modsecurity.
-	# Keeping your local configuration in that directory
-	# will allow for an easy upgrade of THIS file and
-	# make your life easier
-        IncludeOptional /etc/modsecurity/*.conf
-
-	# Include OWASP ModSecurity CRS rules if installed
-#	IncludeOptional /usr/share/modsecurity-crs/owasp-crs.load
-        IncludeOptional /usr/share/modsecurity-crs/*.conf
-        IncludeOptional "/usr/share/modsecurity-crs/rules/*.conf
-</IfModule>
-
+<LocationMatch "/wp-json/wp/v2/pages/[0-9]+/.*">
+    # Fix For "Inbound Anomaly Score Exceeded"
+    SecRuleRemoveById 949110
+</LocationMatch>
+<LocationMatch "/wp-json/wp/v2/pages/[0-9]+">
+    # Fix For "Inbound Anomaly Score Exceeded"
+    SecRuleRemoveById 949110
+</LocationMatch>
 <LocationMatch "/wp-admin/async-upload.php">
     SecRuleRemoveById 200004
 </LocationMatch>
