--- a/dev-ini/xdebug.ini
+++ b/dev-ini/xdebug.ini
@@ -1,6 +1,8 @@
 xdebug.profiler_output_dir=/var/log/xdebug-profiler/
 xdebug.profiler_output_name=cachegrind.out.%p
 xdebug.profiler_enable=1
+xdebug.profiler_enable_trigger=1
+;xdebug.profiler_append=1
 
 xdebug.remote_enable=1
 xdebug.remote_autostart=0
