Additional modsec exclusions

--- a/conf-enabled/security2.conf
+++ b/conf-enabled/security2.conf
@@ -7,6 +7,13 @@
     # Fix For "Inbound Anomaly Score Exceeded"
     SecRuleRemoveById 949110
 </LocationMatch>
+<LocationMatch "/wp-json/wp/v2/pages/[0-9]+/autosaves">
+    # Fix for 'ModSecurity: Warning. Matched phrase "<!--" at ARGS:content.'
+    SecRuleRemoveById 941180
+    # Fix for 'Matched Data: <!-- wp:image  found within ARGS:content'
+    SecRuleRemoveById 941160
+</LocationMatch>
+
 <LocationMatch "/wp-admin/async-upload.php">
     SecRuleRemoveById 200004
 </LocationMatch>
