Image upload fix (unmatched boundary error)

--- a/conf-enabled/security2.conf
+++ b/conf-enabled/security2.conf
@@ -14,7 +14,8 @@
     SecRuleRemoveById 941160
 </LocationMatch>
 
-<LocationMatch "/wp-admin/async-upload.php">
+<LocationMatch "(/wp-json/wp/v2/media)|(/wp-admin/async-upload.php)">
+    # Fix for 'Match of "eq 0" against "MULTIPART_UNMATCHED_BOUNDARY" required. '
     SecRuleRemoveById 200004
 </LocationMatch>
 <LocationMatch "/wp-admin/admin-ajax.php">
