Added exclusion rule

--- a/conf-enabled/security2.conf
+++ b/conf-enabled/security2.conf
@@ -3,10 +3,14 @@
     # Fix For "Inbound Anomaly Score Exceeded"
     SecRuleRemoveById 949110
 </LocationMatch>
+
 <LocationMatch "/wp-json/wp/v2/pages/[0-9]+">
     # Fix For "Inbound Anomaly Score Exceeded"
     SecRuleRemoveById 949110
+    # Fix for 'Matched phrase "<!--" at ARGS:content.'
+    SecRuleRemoveById 941180
 </LocationMatch>
+
 <LocationMatch "/wp-json/wp/v2/pages/[0-9]+/autosaves">
     # Fix for 'ModSecurity: Warning. Matched phrase "<!--" at ARGS:content.'
     SecRuleRemoveById 941180
@@ -14,7 +18,11 @@
     SecRuleRemoveById 941160
 </LocationMatch>
 
-<LocationMatch "(/wp-json/wp/v2/media)|(/wp-admin/async-upload.php)">
+<LocationMatch "/wp-admin/async-upload.php">
+    # Fix for 'Match of "eq 0" against "MULTIPART_UNMATCHED_BOUNDARY" required. '
+    SecRuleRemoveById 200004
+</LocationMatch>
+<LocationMatch "/wp-json/wp/v2/media">
     # Fix for 'Match of "eq 0" against "MULTIPART_UNMATCHED_BOUNDARY" required. '
     SecRuleRemoveById 200004
 </LocationMatch>
