Additional rule exclusions

--- a/conf-enabled/security2.conf
+++ b/conf-enabled/security2.conf
@@ -9,6 +9,13 @@
     SecRuleRemoveById 949110
     # Fix for 'Matched phrase "<!--" at ARGS:content.'
     SecRuleRemoveById 941180
+
+    # Suppress 'Warning. detected XSS using libinjection.'
+    SecRuleRemoveById 941100
+    # Suppress Warning 'Warning. Pattern match ...'
+    SecRuleRemoveById 941160
+    # Suppress Warning 'Warning. Pattern match ...'
+    SecRuleRemoveById 941130
 </LocationMatch>
 
 <LocationMatch "/wp-json/wp/v2/pages/[0-9]+/autosaves">
