Fix li page rewrite, IP forwarding logging tweak

--- a/sites-available/000-default.conf
+++ b/sites-available/000-default.conf
@@ -4,10 +4,14 @@
 	ServerAdmin webmaster@localhost
 #	DocumentRoot /var/www/html/
 
+        # Set Env 'forwarded' if X-Forwarder-For looks like an IP address
+        SetEnvIf X-Forwarded-For "^.*\..*\..*\..*" forwarded
+        LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
+        LogFormat "%{X-Forwarded-For}i %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" forwarded
+
 #        LogLevel alert rewrite:trace6
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
-
 
 
         <Directory /var/www/html/>
@@ -24,16 +28,18 @@
 
             <IfModule mod_rewrite.c>
                 RewriteEngine On
-                RewriteBase /
 
                 # Disable trace and track requests
+                RewriteBase /
                 RewriteCond %{REQUEST_METHOD} ^(TRACE|TRACK)
                 RewriteRule .* - [F]
 
                 # Don't re-write requests directly to index.php (don't think this does anything)
+                RewriteBase /
                 RewriteRule ^index\.php$ - [L]
 
                 # Alias li to wp-login.php
+                RewriteBase /
                 RewriteRule ^li$ /wp-login.php [L]
 
                 # BEGIN WordPress
