Additional modsec exclusions

--- a/conf-enabled/security2.conf
+++ b/conf-enabled/security2.conf
@@ -16,8 +16,9 @@
     SecRuleRemoveById 941160
     # Suppress Warning 'Warning. Pattern match ...'
     SecRuleRemoveById 941130
+    # Fix 'Remote Command Execution: Unix Shell Expression Found
+    SecRuleRemoveById 932130
 </LocationMatch>
-
 <LocationMatch "/wp-json/wp/v2/pages/[0-9]+/autosaves">
     # Fix for 'ModSecurity: Warning. Matched phrase "<!--" at ARGS:content.'
     SecRuleRemoveById 941180
@@ -44,6 +45,8 @@
     SecRuleRemoveById 941100
     # Fix Elementor "Remote Command Execution: Unix Shell Expression Found"
     SecRuleRemoveById 932130
+    # Fix Elementor "Matched phrase "<!--" at ARGS:actions. "
+    SecRuleRemoveById 941180
 </LocationMatch>
 
 # https://www.binarymoon.co.uk/2011/05/wordpress-mod-security-2/
