Updated security rule exclusions to include posts as well as pages

--- a/conf-enabled/security2.conf
+++ b/conf-enabled/security2.conf
@@ -1,10 +1,5 @@
 
-<LocationMatch "/wp-json/wp/v2/pages/[0-9]+/.*">
-    # Fix For "Inbound Anomaly Score Exceeded"
-    SecRuleRemoveById 949110
-</LocationMatch>
-
-<LocationMatch "/wp-json/wp/v2/pages/[0-9]+">
+<LocationMatch "/wp-json/wp/v2/(pages|posts)/[0-9]+/.*">
     # Fix For "Inbound Anomaly Score Exceeded"
     SecRuleRemoveById 949110
     # Fix for 'Matched phrase "<!--" at ARGS:content.'
@@ -19,7 +14,7 @@
     # Fix 'Remote Command Execution: Unix Shell Expression Found
     SecRuleRemoveById 932130
 </LocationMatch>
-<LocationMatch "/wp-json/wp/v2/pages/[0-9]+/autosaves">
+<LocationMatch "/wp-json/wp/v2/(pages|posts)/[0-9]+/autosaves">
     # Fix for 'ModSecurity: Warning. Matched phrase "<!--" at ARGS:content.'
     SecRuleRemoveById 941180
     # Fix for 'Matched Data: <!-- wp:image  found within ARGS:content'
