--- a/hooks/build
+++ b/hooks/build
@@ -1,3 +1,3 @@
 #!/bin/bash
-docker build --target=production -t $IMAGE_NAME:$DOCKER_TAG .
-docker build --target=development -t $IMAGE_NAME-dev:$DOCKER_TAG .
+docker build --target=production -t $DOCKER_REPO:$DOCKER_TAG .
+docker build --target=development -t $DOCKER_REPO-dev:$DOCKER_TAG .
