--- a/conf-enabled/security2.conf
+++ b/conf-enabled/security2.conf
@@ -2,6 +2,11 @@
 <LocationMatch "/wp-json/wp/v2/(pages|posts)/[0-9]+/.*">
     # Fix For "Inbound Anomaly Score Exceeded"
     SecRuleRemoveById 949110
+</LocationMatch>
+
+<LocationMatch "/wp-json/wp/v2/(pages|posts)/[0-9]+">
+    # Fix For "Inbound Anomaly Score Exceeded"
+    SecRuleRemoveById 949110
     # Fix for 'Matched phrase "<!--" at ARGS:content.'
     SecRuleRemoveById 941180
 
