Increased resource cache time to one year

--- a/conf-enabled/optimisation.conf
+++ b/conf-enabled/optimisation.conf
@@ -50,31 +50,31 @@
     # Default expiration: 1 hour after request
     ExpiresDefault "now plus 1 hour"
     # CSS and JS expiration: 1 week after request
-    ExpiresByType text/css "now plus 1 week"
-    ExpiresByType application/javascript "now plus 1 week"
-    ExpiresByType application/x-javascript "now plus 1 week"
+    ExpiresByType text/css "now plus 1 year"
+    ExpiresByType application/javascript "now plus 1 year"
+    ExpiresByType application/x-javascript "now plus 1 year"
     # Image files expiration: 1 month after request
-    ExpiresByType image/bmp "now plus 1 month"
-    ExpiresByType image/gif "now plus 1 month"
-    ExpiresByType image/jpeg "now plus 1 month"
-    ExpiresByType image/jp2 "now plus 1 month"
-    ExpiresByType image/pipeg "now plus 1 month"
-    ExpiresByType image/png "now plus 1 month"
-    ExpiresByType image/svg+xml "now plus 1 month"
-    ExpiresByType image/tiff "now plus 1 month"
-    ExpiresByType image/vnd.microsoft.icon "now plus 1 month"
-    ExpiresByType image/x-icon "now plus 1 month"
-    ExpiresByType image/ico "now plus 1 month"
-    ExpiresByType image/icon "now plus 1 month"
-    ExpiresByType text/ico "now plus 1 month"
-    ExpiresByType application/ico "now plus 1 month"
+    ExpiresByType image/bmp "now plus 1 year"
+    ExpiresByType image/gif "now plus 1 year"
+    ExpiresByType image/jpeg "now plus 1 year"
+    ExpiresByType image/jp2 "now plus 1 year"
+    ExpiresByType image/pipeg "now plus 1 year"
+    ExpiresByType image/png "now plus 1 year"
+    ExpiresByType image/svg+xml "now plus 1 year"
+    ExpiresByType image/tiff "now plus 1 year"
+    ExpiresByType image/vnd.microsoft.icon "now plus 1 year"
+    ExpiresByType image/x-icon "now plus 1 year"
+    ExpiresByType image/ico "now plus 1 year"
+    ExpiresByType image/icon "now plus 1 year"
+    ExpiresByType text/ico "now plus 1 year"
+    ExpiresByType application/ico "now plus 1 year"
     # Webfonts
-    ExpiresByType font/truetype "access plus 1 month"
-    ExpiresByType font/opentype "access plus 1 month"
-    ExpiresByType font/woff2    "access plus 1 month"
-    ExpiresByType application/x-font-woff "access plus 1 month"
-    ExpiresByType image/svg+xml "access plus 1 month"
-    ExpiresByType application/vnd.ms-fontobject "access plus 1 month"
+    ExpiresByType font/truetype "access plus 1 year"
+    ExpiresByType font/opentype "access plus 1 year"
+    ExpiresByType font/woff2    "access plus 1 year"
+    ExpiresByType application/x-font-woff "access plus 1 year"
+
+    ExpiresByType application/vnd.ms-fontobject "access plus 1 year"
 </IfModule>
 
 # BEGIN Cache-Control Headers
